--- a/css/add-tocart.css
+++ b/css/add-tocart.css
@@ -80,17 +80,18 @@
   justify-content: space-between;
 }
 
-
-/* footer-section*/
+/* footer */
 .footer-section {
   background-color: #343434;
   color: #fff;
 }
+
 .footer-left-sec p {
   font-size: 13px;
   line-height: 20px;
   color: rgba(255, 255, 255, .5);
 }
+
 .footer-contact-details-body a {
   text-decoration: none;
   font-size: 12px;
@@ -99,15 +100,17 @@
   font-weight: 700;
   text-transform: uppercase;
 }
+
 .footer-contact-details-body i {
   color: #b8cd06;
   font-size: 16px;
 }
-.footer-address-sec {
+
+.footer-address-sec{
   font-size: 12px;
   font-weight: 500;
 }
-.footer-contact-details-body a:hover {
+.footer-contact-details-body a:hover{
   color: #b8cd06;
 }
 .footer-column-links a {
@@ -119,9 +122,11 @@
   margin-bottom: 12px;
   text-decoration: none;
 }
+
 .footer-column-links a :hover {
   color: #b8cd06;
 }
+
 .footer-column-links-tags a {
   font-size: 9px;
   text-transform: uppercase;
@@ -137,16 +142,19 @@
   text-decoration: none;
   -webkit-border-radius: 17px;
 }
-.footer-section p:hover {
-  color: #b8cd06;
+
+.footer-section p:hover{
+color: #b8cd06;
 }
-.footer-column-links a:hover {
+
+.footer-column-links a:hover{
   color: #b8cd06;
 }
 .footer-column-links-tags a:hover {
   color: white;
   background-color: #b8cd06;
 }
+
 .footer-post-sec {
   display: flex;
   align-items: center;
@@ -154,28 +162,24 @@
   margin-bottom: 20px;
 }
 
-
-
-.footer-post-sec .img-fluid:hover{
-  overflow: hidden;
-  color: #b8cd06;
+.footer-post-sec img:hover{
+  background-color: #b8cd06;
 }
 
-
-.footer-post-sec:hover {
-  color: #b8cd06;
-}
 .footer-date {
   font-size: 10px;
   line-height: 16px;
   color: rgba(255, 255, 255, .5);
   text-transform: uppercase;
 }
+
 .footer-post-sec img {
   display: block;
   max-width: 100%;
   border-radius: 5%;
 }
+
+
 .footer-post-sec p {
   font-family: 'Raleway', sans-serif;
   font-size: 11px;
@@ -184,6 +188,7 @@
   font-weight: 700;
   text-transform: uppercase;
 }
+
 .footer-section h6 {
   font-size: 13px;
   font-weight: 900;
@@ -191,10 +196,12 @@
   text-transform: uppercase;
   line-height: 18px;
 }
+
 .footer-top {
   border-bottom: 1px rgba(255, 255, 255, .05) solid;
   padding: 60px 0;
 }
+
 .footer-social-icons i {
   border: 1px solid #424242;
   padding: 13px;
@@ -205,19 +212,21 @@
   -webkit-border-radius: 50%;
 }
 .footer-social-icons i:hover {
-  color: white;
-  background-color: #b8cd06;
-  -webkit-transition: all .15s;
+ color: white;
+ background-color: #b8cd06;
+ -webkit-transition: all .15s;
 }
-.copyright-section p {
+
+.copyright-section p{
   font-size: 13px;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255,255,255,.5);
 }
-.agency-copy {
+
+.agency-copy{
   color: #b8cd06;
   text-decoration: none;
 }
-.footer-payment-icons a {
+.footer-payment-icons a{
   margin: 6px;
 }
 
