--- a/css/style.css
+++ b/css/style.css
@@ -480,16 +480,18 @@ color: #b8cd06;
 
 .footer-top {
   border-bottom: 1px rgba(255, 255, 255, .05) solid;
-  padding: 60px 0;
+  border-width: 2px ;
+  padding: 20px 0px 10px;
 }
 
 .footer-social-icons i {
-  border: 1px solid #424242;
-  padding: 13px;
+  border: 2px solid #424242;
+  padding: 5px 10px;
   background: #424242;
   color: #888;
   font-size: 14px;
-  margin: 0 7px 7px 7px;
+ text-align: center;
+ margin: 6px;
   -webkit-border-radius: 50%;
 }
 .footer-social-icons i:hover {
@@ -510,7 +512,6 @@ color: #b8cd06;
 .footer-payment-icons a{
   margin: 6px;
 }
-
 
 
 
