--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ font-size: 12px;
 /*  */
 .banner-product-all-categories-main-body {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-center;
+  margin: 0px 5px;
+  align-items: center;
   flex-wrap: wrap;
 }
 .banner-product-all-categories-main-body h6 {
