--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ font-size: 12px;
   justify-content: space-center;
   margin: 0px 5px;
   align-items: center;
+  text-align: center;
   flex-wrap: wrap;
 }
 .banner-product-all-categories-main-body h6 {
