--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,9 @@ font-size: 12px;
 /*  */
 .banner-product-all-categories-main-body {
   display: flex;
-  justify-content:center;
+  justify-content:space-around;
   margin: 0px 5px;
   align-items: center;
-  text-align: center;
   flex-wrap: wrap;
 }
 .banner-product-all-categories-main-body h6 {
