--- a/css/add-tocart.css
+++ b/css/add-tocart.css
@@ -4,10 +4,66 @@
   box-sizing: border-box;
 }
 
-.breadcrumb-section {
-  margin-top: 13px;
+html{
+  scroll-behavior: smooth;
+}
+body {
+  font-family: 'Montserrat', sans-serif;
 }
 
+/* navbar */
+.navbar{
+  background-color:whitesmoke;
+}
+.navbar-nav a{
+  font-size: 15px;
+  font-weight: 500;
+  color: #343434;
+  letter-spacing: 1px;
+}
+.nav-brand-icons .nav-item i  {
+  font-size: 19px;
+  color:#0D775E;
+}
+.dropdown-toggle::after{
+color:#E80E50;
+}
+.nav-brand-icons .btn{
+  text-decoration: none;
+  background-color:#e80e4fda;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 23px;
+}
+.search-body button{
+  font-size: 15px;
+  border-radius: 8px;
+  padding: 4px 8px;
+  border: 1px solid #424242;
+}
+.navbar input{
+  width: 370px;
+  height: 40px;
+font-size: 12px;
+font-size: 16px;
+border-radius: 18px;
+border-color: #39b296;
+border-width: 2px;
+}
+
+
+
+
+
+
+.add-to-bag-main-page {
+  padding: 70px 0px 20px;
+  background: url(/homepageimages/bg-serv.jpg);
+}
+.add-to-bag-body-content{
+  border-radius: 10px;
+  box-shadow: -2px -7px 16px gainsboro;
+}
 .add-to-bag-body-content .title-top-para {
   font-size: 15px;
   font-weight: 600;
@@ -19,17 +75,9 @@
   margin: 0px 5px;
 }
 
-
-.progress{
-  height: 7px !important;
-  width: 55% !important;
-}
-
-
 .review-paragraph-text {
-  font-size: 16px;
-  color: #797979;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 400;
   letter-spacing: 0.5px;
 }
 
@@ -41,25 +89,102 @@
   color: #f44336;
   font-weight: 600;
 }
-
 .hstack-thumb {
-  color: #999;
+  color:#000;
 }
 
-.write-review-btn a {
-  text-decoration: none;
+
+.progress{
+  height: 9px !important;
+  width: 65% !important;
+}
+
+
+
+
+
+.add-tocart-featured-product {
+  display: flex;
+  align-items: center;
+  width: 55px;
+  gap: 7px;
+}
+
+.add-to-carts-featured-products-sizes-btn .btn {
+  padding: 13px;
+  border-radius: 14%;
+  background-color:skyblue;
+  font-size: 13px;
+  color:#000;
+  font-weight: 600;
+}
+
+.add-to-carts-featured-products-add-tobag-whishlist-btn .btn-1 {
+  background-color:#ea1e0fe5;
+  color: white;
+  padding: 6px 10px;
+  border-radius: 23px;
+}
+
+.add-to-carts-featured-products-add-tobag-whishlist-btn {
+  display: flex;
+  gap: 5px;
+}
+
+.add-to-carts-featured-products-add-tobag-whishlist-btn .btn {
+  border: 1px solid rgba(255, 0, 0, 0.181);
+  padding: 6px 10px;
+  border-radius: 23px;
+}
+.product-details{
+  letter-spacing: 0.6px;
+  font-size: 15px;
+  font-weight: 400;
+
+}
+
+.rating-Reviews img {
+  width: 65px;
+}
+
+
+
+.write-review-btn .btn {
+  padding: 7px 13px;
   color: white;
   font-size: 16px;
   font-weight: 600;
   letter-spacing: 1px;
-}
-
-.write-review-btn .btn {
-  padding: 7px 15px;
   background-color:#f44336;
-  border-radius: 6px;
+  border-radius: 23px;
+}
+.rating-date-like-bottom-sec {
+  display: flex;
+  justify-content:space-between;
 }
 
+.left-sidebar-yellow-star i{
+  font-size: 13px;
+  color:#f44336;
+}
+.Add-a-review-heading{
+  font-size: 17px;
+  font-weight: 700;
+  color:#000;
+}
+
+.add-to-cart-reviews-form-section input{
+  height: 40px;
+  width: 100%;
+  border-color: #04AA6D;
+  font-size: 13px;
+  border-radius: 23px;
+}
+.add-to-cart-reviews-form-section label{
+ font-size: 16px;
+ color:#323232;
+ font-weight: 400;
+}
 .reviews-submit-btn a{
   background-color:#04AA6D;
   border-radius: 10px;
@@ -72,129 +197,79 @@
   color: white;
 }
 .reviews-submit-btn a:hover{
-  background-color:#fff;
-  color: black;
+  background-color:#f44336;
+  color:wheat;
 }
-.add-to-cart-reviews-form-section input{
-  height: 40px;
-  width: 100%;
-  border-color: #04AA6D;
-  font-size: 13px;
-  border-radius: 10px;
+
+.Product-Reviews-section{
+  padding: 10px 0px 10px;
+  background: url(/homepageimages/bg-serv.jpg);
 }
-.add-to-cart-reviews-form-section label{
- font-size: 16px;
- color:#323232;
- font-weight: 500;
-}
-.Add-a-review-heading{
-  font-size: 18px;
-  font-weight: 700;
-  color:#000;
-}
-.nav-link{
-  background-color:#323232 !important;
+.Product-Reviews-section.nav-link{
+  background-color:#b8cd06 !important;
   color: white !important;
-  margin: 0px 5px;
+  margin: 5px 5px;
+  border-radius: 23px !important;
 }
 
-.add-to-bag-main-page {
-  padding: 20px 0px 20px;
-}
 
-.add-tocart-featured-product {
-  display: flex;
-  align-items: center;
-  width: 65px;
-  gap: 7px;
-}
 
-.add-to-carts-featured-products-sizes-btn {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
 
-.add-to-carts-featured-products-sizes-btn .btn {
-  border: 1px solid black;
-  padding: 10px;
-  border-radius: 50%;
-  margin-bottom: 10px;
 
-}
-
-.add-to-carts-featured-products-add-tobag-whishlist-btn .btn-1 {
-  background-color: #000;
-  color: white;
-}
-
-.add-to-carts-featured-products-add-tobag-whishlist-btn {
-  display: flex;
-  gap: 5px;
-  align-items: center;
-}
-
-.add-to-carts-featured-products-add-tobag-whishlist-btn .btn {
-  border: 1px solid black;
-  padding: 10px 20px;
-}
-
-.rating-Reviews img {
-  width: 65px;
-}
-
-.rating-date-like-bottom-sec {
-  display: flex;
-  justify-content: space-between;
-}
-
-.left-sidebar-yellow-star i{
-  font-size: 10px;
-  color: #04AA6D;
-}
+/* footer */
 
 /* footer */
 .footer-section {
   background-color: #343434;
-  color: #fff;
 }
 
 .footer-left-sec p {
   font-size: 13px;
-  line-height: 20px;
-  color: rgba(255, 255, 255, .5);
+  color: white;
+  letter-spacing: 1px;
+}
+
+.footer-contact-details-body  {
+ display: flex;
+ justify-content:space-evenly;
 }
 
 .footer-contact-details-body a {
-  text-decoration: none;
-  font-size: 12px;
-  line-height: 28px;
-  color: rgba(255, 255, 255, .5);
-  font-weight: 700;
-  text-transform: uppercase;
+  font-size: 13px;
 }
-
-.footer-contact-details-body i {
-  color: #b8cd06;
-  font-size: 16px;
+.footer-contact-details-body .btn-youtube{
+  border: 1px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color: red;
 }
+.footer-contact-details-body .btn-telegram{
+  border: 1px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color:#0EB2E8;
+  border: 1px solid #0EB2E8;
 
-.footer-address-sec {
-  font-size: 12px;
-  font-weight: 500;
 }
+.footer-contact-details-body .btn-Instagram{
+  border: 1px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color:#E80E50;
+  border: 1px solid #E80E50;
 
+}
 .footer-contact-details-body a:hover {
   color: #b8cd06;
 }
 
 .footer-column-links a {
-  font-size: 11px;
-  color: rgba(255, 255, 255, .5);
+  font-size: 12px;
+  color:#888;
   text-transform: uppercase;
   display: block;
-  line-height: 22px;
-  margin-bottom: 12px;
+  font-weight: 600;
+  padding: 5px;
   text-decoration: none;
 }
 
@@ -203,15 +278,14 @@
 }
 
 .footer-column-links-tags a {
-  font-size: 9px;
+  font-size: 10px;
   text-transform: uppercase;
   background: #424242;
   color: rgba(255, 255, 255, .5);
   letter-spacing: .9px;
   line-height: 14px;
   font-weight: 700;
-  font-family: 'Raleway', sans-serif;
-  padding: 10px;
+  padding: 8px 15px;
   display: inline-block;
   margin: 0 10px 10px 0;
   text-decoration: none;
@@ -244,7 +318,6 @@
 
 .footer-date {
   font-size: 10px;
-  line-height: 16px;
   color: rgba(255, 255, 255, .5);
   text-transform: uppercase;
 }
@@ -258,11 +331,9 @@
 
 .footer-post-sec p {
   font-family: 'Raleway', sans-serif;
-  font-size: 11px;
-  line-height: 14px;
-  color: rgba(255, 255, 255, .8);
+  font-size: 10px;
+  color:#888;
   font-weight: 700;
-  text-transform: uppercase;
 }
 
 .footer-section h6 {
