--- a/css/profile.css
+++ b/css/profile.css
@@ -8,34 +8,64 @@ body {
 }
 
 /* navbar */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+/* navbar */
+.navbar{
+  background-color:whitesmoke;
+}
 .navbar-nav a{
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 500;
   color: #343434;
   letter-spacing: 1px;
 }
 .nav-brand-icons .nav-item i  {
-  font-size: 15px;
-  color:#424242;
+  font-size: 19px;
+  color:#0D775E;
+}
+.dropdown-toggle::after{
+color:#E80E50;
 }
 .nav-brand-icons .btn{
   text-decoration: none;
-  background-color: #424242;
+  background-color:#e80e4fda;
   color: white;
-  padding: 4px 10px;
-  border-radius: 6px;
+  padding: 4px 8px;
+  border-radius: 23px;
 }
 .search-body button{
-  font-size: 10px;
+  font-size: 15px;
+  border-radius: 8px;
+  padding: 4px 8px;
   border: 1px solid #424242;
 }
 .navbar input{
+  width: 370px;
+  height: 40px;
 font-size: 12px;
+font-size: 16px;
+border-radius: 18px;
+border-color: #39b296;
+border-width: 2px;
 }
 
 
 
 /* profile */
+.main-profile-wrapper-body{
+  padding: 10px 0px 10px;
+}
 .profile-area .main-profile {
   margin-bottom: 20px;
   display: flex;
@@ -54,9 +84,20 @@ font-size: 12px;
   border-radius: 4px;
 }
 .bn632-hover.bn18 {
-  color: black;
-  background-color: rgba(85, 27, 27, 0.182);
+  color:white;
+  background-color:#0D775E;
+  border-radius: 20px;
+  font-size: 15px;
+  letter-spacing: 0.8px;
 }
+.bn632-hover.bn18:hover{
+background-color:#E80E50;
+color: white;
+transition: 0.4s ease-in-out;
+border-radius: 4px;
+
+}
+
 .hrtag {
   color: black;
   border-bottom: 2px dotted;
@@ -64,96 +105,118 @@ font-size: 12px;
   width: 100%;
   height: 2px;
 }
+
+
 /* footer */
 .footer-section {
   background-color: #343434;
-  color: #fff;
 }
 
 .footer-left-sec p {
   font-size: 13px;
-  line-height: 20px;
-  color: rgba(255, 255, 255, .5);
+  letter-spacing: 0.4px;
+  color: white;
+}
+
+.footer-contact-details-body  {
+ display: flex;
+ justify-content:space-evenly;
 }
 
 .footer-contact-details-body a {
-  text-decoration: none;
-  font-size: 12px;
-  line-height: 28px;
-  color: rgba(255, 255, 255, .5);
-  font-weight: 700;
-  text-transform: uppercase;
+  font-size: 13px;
 }
-
-.footer-contact-details-body i {
-  color: #b8cd06;
-  font-size: 16px;
-}
-
-.footer-address-sec{
-  font-size: 12px;
+.footer-contact-details-body .btn-youtube{
+  border: 2px solid cornflowerblue;
+  color: white;
+  border-radius: 20px;
+  font-size: 13px;
   font-weight: 500;
+  background-color: red;
 }
-.footer-contact-details-body a:hover{
+.footer-contact-details-body .btn-telegram{
+  border: 2px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color:#0EB2E8;
+
+}
+.footer-contact-details-body .btn-Instagram{
+  border: 1px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color:#E80E50;
+  border: 1px solid #0EB2E8;
+
+}
+.footer-contact-details-body a:hover {
   color: #b8cd06;
 }
+
 .footer-column-links a {
-  font-size: 11px;
-  color: rgba(255, 255, 255, .5);
+  font-size: 12px;
+  /* color: rgba(255, 255, 255, 0.867); */
+  color:#888;
   text-transform: uppercase;
+  border: 1px solid #ffffff14;
+border-radius: 10px;
+text-align: center;
+padding: 4px 10px;
+margin: 7px 0px 0px;
   display: block;
-  line-height: 22px;
-  margin-bottom: 12px;
+  font-weight: 600;
   text-decoration: none;
 }
 
 .footer-column-links a :hover {
-  color: #b8cd06;
+  color:#0EB2E8;
 }
 
 .footer-column-links-tags a {
-  font-size: 9px;
+  font-size: 10px;
   text-transform: uppercase;
-  background: #424242;
-  color: rgba(255, 255, 255, .5);
+  background: #424242f8;
+  color:#888;
   letter-spacing: .9px;
   line-height: 14px;
   font-weight: 700;
-  font-family: 'Raleway', sans-serif;
-  padding: 10px;
+  padding: 8px 15px;
   display: inline-block;
   margin: 0 10px 10px 0;
   text-decoration: none;
   -webkit-border-radius: 17px;
 }
 
-.footer-section p:hover{
-color: #b8cd06;
-}
-
-.footer-column-links a:hover{
+.footer-section p:hover {
   color: #b8cd06;
 }
+
+.footer-column-links a:hover {
+  color: #b8cd06;
+}
+
 .footer-column-links-tags a:hover {
   color: white;
+  transition: 0.4s ease-in-out;
   background-color: #b8cd06;
+  -webkit-border-radius: 13px;
+
 }
 
 .footer-post-sec {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
-.footer-post-sec img:hover{
+.footer-post-sec img:hover {
   background-color: #b8cd06;
 }
 
 .footer-date {
   font-size: 10px;
-  line-height: 16px;
-  color: rgba(255, 255, 255, .5);
+  color:#888;
   text-transform: uppercase;
 }
 
@@ -165,25 +228,21 @@ color: #b8cd06;
 
 
 .footer-post-sec p {
-  font-family: 'Raleway', sans-serif;
-  font-size: 11px;
-  line-height: 14px;
-  color: rgba(255, 255, 255, .8);
-  font-weight: 700;
-  text-transform: uppercase;
+  font-size: 12px;
+  color:#888;
+  font-weight: 600;
 }
 
 .footer-section h6 {
-  font-size: 13px;
-  font-weight: 900;
-  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color:aliceblue;
   text-transform: uppercase;
-  line-height: 18px;
 }
 
 .footer-top {
-  border-bottom: 1px rgba(255, 255, 255, .05) solid;
-  border-width: 2px ;
+  border-bottom: 3px rgba(255, 255, 255, .05) solid;
+  border-width: 2px;
   padding: 20px 0px 10px;
 }
 
@@ -193,28 +252,27 @@ color: #b8cd06;
   background: #424242;
   color: #888;
   font-size: 14px;
- text-align: center;
- margin: 6px;
+  text-align: center;
+  margin: 6px;
   -webkit-border-radius: 50%;
 }
+
 .footer-social-icons i:hover {
- color: white;
- background-color: #b8cd06;
- -webkit-transition: all .15s;
+  color: white;
+  background-color: #b8cd06;
+  -webkit-transition: all .15s;
 }
 
-.copyright-section p{
+.copyright-section p {
   font-size: 13px;
-  color: rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, .5);
 }
 
-.agency-copy{
+.agency-copy {
   color: #b8cd06;
   text-decoration: none;
 }
-.footer-payment-icons a{
+
+.footer-payment-icons a {
   margin: 6px;
 }
-
-
-
