--- a/css/style.css
+++ b/css/style.css
@@ -4,40 +4,54 @@
   box-sizing: border-box;
 }
 
-body {
-  line-height: 24px;
-  color: #999;
-  font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  letter-spacing: 0px;
+html{
+  scroll-behavior: smooth;
 }
-
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 /* navbar */
+.navbar{
+  background-color:whitesmoke;
+}
 .navbar-nav a{
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 500;
   color: #343434;
   letter-spacing: 1px;
 }
 .nav-brand-icons .nav-item i  {
-  font-size: 15px;
-  color:#424242;
+  font-size: 19px;
+  color:#0D775E;
+}
+.dropdown-toggle::after{
+color:#E80E50;
 }
 .nav-brand-icons .btn{
   text-decoration: none;
-  background-color: #424242;
+  background-color:#e80e4fda;
   color: white;
-  padding: 4px 10px;
-  border-radius: 6px;
+  padding: 4px 8px;
+  border-radius: 23px;
 }
 .search-body button{
-  font-size: 10px;
+  font-size: 15px;
+  border-radius: 8px;
+  padding: 4px 8px;
   border: 1px solid #424242;
 }
 .navbar input{
+  width: 370px;
+  height: 40px;
 font-size: 12px;
+font-size: 16px;
+border-radius: 18px;
+border-color: #39b296;
+border-width: 2px;
 }
+
+
+
 
 /*  */
 .banner-product-all-categories-main-body {
@@ -280,48 +294,61 @@ font-size: 12px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+
+
+
 /* footer */
 .footer-section {
   background-color: #343434;
-  color: #fff;
 }
 
 .footer-left-sec p {
   font-size: 13px;
-  line-height: 20px;
-  color: rgba(255, 255, 255, .5);
+  color: white;
+  letter-spacing: 1px;
+}
+
+.footer-contact-details-body  {
+ display: flex;
+ justify-content:space-evenly;
 }
 
 .footer-contact-details-body a {
-  text-decoration: none;
-  font-size: 12px;
-  line-height: 28px;
-  color: rgba(255, 255, 255, .5);
-  font-weight: 700;
-  text-transform: uppercase;
+  font-size: 13px;
 }
-
-.footer-contact-details-body i {
-  color: #b8cd06;
-  font-size: 16px;
+.footer-contact-details-body .btn-youtube{
+  border: 1px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color: red;
 }
+.footer-contact-details-body .btn-telegram{
+  border: 1px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color:#0EB2E8;
+  border: 1px solid #0EB2E8;
 
-.footer-address-sec {
-  font-size: 12px;
-  font-weight: 500;
 }
+.footer-contact-details-body .btn-Instagram{
+  border: 1px solid red;
+  color: white;
+  border-radius: 20px;
+  background-color:#E80E50;
+  border: 1px solid #E80E50;
 
+}
 .footer-contact-details-body a:hover {
   color: #b8cd06;
 }
 
 .footer-column-links a {
-  font-size: 11px;
-  color: rgba(255, 255, 255, .5);
+  font-size: 12px;
+  color:#888;
   text-transform: uppercase;
   display: block;
-  line-height: 22px;
-  margin-bottom: 12px;
+  font-weight: 600;
+  padding: 5px;
   text-decoration: none;
 }
 
@@ -330,15 +357,14 @@ font-size: 12px;
 }
 
 .footer-column-links-tags a {
-  font-size: 9px;
+  font-size: 10px;
   text-transform: uppercase;
   background: #424242;
   color: rgba(255, 255, 255, .5);
   letter-spacing: .9px;
   line-height: 14px;
   font-weight: 700;
-  font-family: 'Raleway', sans-serif;
-  padding: 10px;
+  padding: 8px 15px;
   display: inline-block;
   margin: 0 10px 10px 0;
   text-decoration: none;
@@ -371,7 +397,6 @@ font-size: 12px;
 
 .footer-date {
   font-size: 10px;
-  line-height: 16px;
   color: rgba(255, 255, 255, .5);
   text-transform: uppercase;
 }
@@ -385,11 +410,9 @@ font-size: 12px;
 
 .footer-post-sec p {
   font-family: 'Raleway', sans-serif;
-  font-size: 11px;
-  line-height: 14px;
-  color: rgba(255, 255, 255, .8);
+  font-size: 10px;
+  color:#888;
   font-weight: 700;
-  text-transform: uppercase;
 }
 
 .footer-section h6 {
