--- a/css/profile.css
+++ b/css/profile.css
@@ -109,13 +109,13 @@ border-radius: 4px;
 
 /* footer */
 .footer-section {
-  background-color: #343434;
+  background-color: #150a0a;
 }
 
 .footer-left-sec p {
-  font-size: 13px;
-  letter-spacing: 0.4px;
-  color: white;
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #bfa9a9ea;
 }
 
 .footer-contact-details-body  {
@@ -127,27 +127,24 @@ border-radius: 4px;
   font-size: 13px;
 }
 .footer-contact-details-body .btn-youtube{
-  border: 2px solid cornflowerblue;
-  color: white;
+  border: 1px solid rgba(185, 192, 188, 0.253);
+  color:#c7b8b8ee;
   border-radius: 20px;
   font-size: 13px;
   font-weight: 500;
-  background-color: red;
 }
 .footer-contact-details-body .btn-telegram{
-  border: 2px solid red;
-  color: white;
+  border: 1px solid rgba(185, 192, 188, 0.253);
+  color:#c7b8b8ee;
   border-radius: 20px;
-  background-color:#0EB2E8;
+  font-weight: 500;
+
 
 }
 .footer-contact-details-body .btn-Instagram{
-  border: 1px solid red;
-  color: white;
+  color:#c7b8b8ee;
+  border: 1px solid rgba(185, 192, 188, 0.253);
   border-radius: 20px;
-  background-color:#E80E50;
-  border: 1px solid #0EB2E8;
-
 }
 .footer-contact-details-body a:hover {
   color: #b8cd06;
@@ -155,16 +152,14 @@ border-radius: 4px;
 
 .footer-column-links a {
   font-size: 12px;
-  /* color: rgba(255, 255, 255, 0.867); */
   color:#888;
   text-transform: uppercase;
-  border: 1px solid #ffffff14;
 border-radius: 10px;
 text-align: center;
 padding: 4px 10px;
 margin: 7px 0px 0px;
   display: block;
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
 }
 
@@ -210,12 +205,8 @@ margin: 7px 0px 0px;
   margin-bottom: 10px;
 }
 
-.footer-post-sec img:hover {
-  background-color: #b8cd06;
-}
-
 .footer-date {
-  font-size: 10px;
+  font-size: 11px;
   color:#888;
   text-transform: uppercase;
 }
@@ -225,8 +216,6 @@ margin: 7px 0px 0px;
   max-width: 100%;
   border-radius: 5%;
 }
-
-
 .footer-post-sec p {
   font-size: 12px;
   color:#888;
@@ -235,8 +224,9 @@ margin: 7px 0px 0px;
 
 .footer-section h6 {
   font-size: 14px;
+  text-align: center;
   font-weight: 600;
-  color:aliceblue;
+  color:#c7b8b8ee;
   text-transform: uppercase;
 }
 
