--- a/css/profile.css
+++ b/css/profile.css
@@ -4,67 +4,51 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #EAEAEA !important;
+  background-color:#4c144b16 !important;
+  font-family: 'Montserrat', sans-serif;
 }
-
-/* navbar */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 html{
   scroll-behavior: smooth;
-}
-body {
-  font-family: 'Montserrat', sans-serif;
 }
 /* navbar */
 .navbar{
   background-color:whitesmoke;
 }
 .navbar-nav a{
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 14px;
   color: #343434;
   letter-spacing: 1px;
 }
 .nav-brand-icons .nav-item i  {
-  font-size: 19px;
-  color:#0D775E;
+  font-size: 15px;
 }
 .dropdown-toggle::after{
 color:#E80E50;
 }
 .nav-brand-icons .btn{
   text-decoration: none;
-  background-color:#e80e4fda;
+  background-color:#150a0a67;
   color: white;
+  font-weight: 400;
   padding: 4px 8px;
-  border-radius: 23px;
-}
-.search-body button{
-  font-size: 15px;
-  border-radius: 8px;
-  padding: 4px 8px;
-  border: 1px solid #424242;
+  border-radius: 5px;
 }
 .navbar input{
   width: 370px;
   height: 40px;
-font-size: 12px;
-font-size: 16px;
-border-radius: 18px;
-border-color: #39b296;
-border-width: 2px;
+letter-spacing: 1px;
+font-size: 14px;
+border-radius: 11px;
 }
+
+
+
 
 
 
 /* profile */
 .main-profile-wrapper-body{
-  padding: 10px 0px 10px;
+  padding: 70px 0px 10px;
 }
 .profile-area .main-profile {
   margin-bottom: 20px;
@@ -84,8 +68,7 @@ border-width: 2px;
   border-radius: 4px;
 }
 .bn632-hover.bn18 {
-  color:white;
-  background-color:#0D775E;
+  color:#6b4651ee;
   border-radius: 20px;
   font-size: 15px;
   letter-spacing: 0.8px;
